--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1,6 +1,40 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
 
+@article{jeurissen2011probabilistic,
+  title={Probabilistic fiber tracking using the residual bootstrap with constrained spherical deconvolution},
+  author={Jeurissen, Ben and Leemans, Alexander and Jones, Derek K and Tournier, Jacques-Donald and Sijbers, Jan},
+  journal={Human brain mapping},
+  volume={32},
+  number={3},
+  pages={461--479},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@Article{berman2008probabilistic,
+  Author         = {Berman, J.I. and Chung, S.W. and Mukherjee, P. and
+                   Hess, C.P. and Han, E.T. and Henry, R.G.},
+  Title          = {Probabilistic streamline q-ball tractography using the
+                   residual bootstrap},
+  Journal        = {Neuroimage},
+  Volume         = {39},
+  Number         = {1},
+  Pages          = {215--222},
+  publisher      = {Elsevier},
+  year           = 2008
+}
+
+@article{morris2008probabilistic,
+  title={Probabilistic fibre tracking: differentiation of connections from chance events},
+  author={Morris, David M and Embleton, Karl V and Parker, Geoff JM},
+  journal={Neuroimage},
+  volume={42},
+  number={4},
+  pages={1329--1339},
+  year={2008},
+  publisher={Elsevier}
+}
 
 @article{VanEssen2013,
 abstract = {The Human Connectome Project consortium led by Washington University, University of Minnesota, and Oxford University is undertaking a systematic effort to map macroscopic human brain circuits and their relationship to behavior in a large population of healthy adults. This overview article focuses on progress made during the first half of the 5-year project in refining the methods for data acquisition and analysis. Preliminary analyses based on a finalized set of acquisition and preprocessing protocols demonstrate the exceptionally high quality of the data from each modality. The first quarterly release of imaging and behavioral data via the ConnectomeDB database demonstrates the commitment to making HCP datasets freely accessible. Altogether, the progress to date provides grounds for optimism that the HCP datasets and associated methods and software will become increasingly valuable resources for characterizing human brain connectivity and function, their relationship to behavior, and their heritability and genetic underpinnings.},
