Reduced abstract size. Needs to be 2000 chars and at the moment it is 2028.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -129,10 +129,7 @@ Diffusion Imaging in Python (Dipy) is a free and open source software project
 for the analysis of data from diffusion magnetic resonance imaging (dMRI)
 experiments. {dMRI} is an application of MRI that can be used to measure
 microstructural features as well as the white matter wiring of the
-human brain \emph{in vivo}. It
-utilizes pulsed directionally oriented magnetic gradients to
-measure the diffusion signal in different directions
-and locations in the brain non-invasively. Many methods
+human brain \emph{in vivo} non-invasively. Many methods
 have been developed to model the local configuration of white matter
 bundles based on this information and to infer the trajectory of
 fascicles connecting different parts of the brain.
@@ -143,9 +140,9 @@ tractography and fiber post-processing, analysis and visualization.
 All the Dipy methods can be easily understood and compared as Dipy aims to
 provide transparent
 implementations for all the different steps of dMRI analysis with a uniform
-programming interface (API). We have implemented classical signal reconstruction techniques, such as
+programming interface. We have implemented classical signal reconstruction techniques, such as
 the diffusion tensor model and deterministic fiber tractography. In addition,
-it implements cutting edge novel reconstruction techniques, such as constrained
+cutting edge novel reconstruction techniques are implemented, such as constrained
 spherical deconvolution and diffusion spectrum imaging with deconvolution, as
 well as methods for probabilistic tracking and original methods for tractography
 clustering. Many additional utility functions are provided to calculate various statistics
@@ -156,10 +153,9 @@ In contrast to many other scientific software projects, Dipy is not being
 developed by a single research group. Rather, it is an open project that
 encourages contributions from any scientist/developer through the
 \emph{github Pull
-Request} mechanism and open discussions on github and on the project mailing
+Request} mechanism and open discussions on the project mailing
 list. Consequently, dipy today has an international team of contributors,
-spanning six different academic institutions in four countries and three continents,
-which is still growing (http://dipy.org).
+spanning seven different academic institutions in five countries and three continents, which is still growing.
 
 \section{Keywords:} Python, Free Open Source Software, Medical
 Imaging, Medical Visualization, Diffusion MRI, Diffusion Tensor,
