Cool now abstract is less than 2000 chars as requested from the guidlines

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -146,16 +146,15 @@ cutting edge novel reconstruction techniques are implemented, such as constraine
 spherical deconvolution and diffusion spectrum imaging with deconvolution, as
 well as methods for probabilistic tracking and original methods for tractography
 clustering. Many additional utility functions are provided to calculate various statistics
-of dMRI data, visualization functions, as well as file-handling routines
+, informative visualizations, as well as file-handling routines
 to assist in the development and use of novel techniques.
 
 In contrast to many other scientific software projects, Dipy is not being
 developed by a single research group. Rather, it is an open project that
-encourages contributions from any scientist/developer through the
-\emph{github Pull
-Request} mechanism and open discussions on the project mailing
-list. Consequently, dipy today has an international team of contributors,
-spanning seven different academic institutions in five countries and three continents, which is still growing.
+encourages contributions from any scientist/developer through github and open 
+discussions on the project mailing list. Consequently, dipy today has an 
+international team of contributors, spanning seven different academic institutions 
+in five countries and three continents, which is still growing.
 
 \section{Keywords:} Python, Free Open Source Software, Medical
 Imaging, Medical Visualization, Diffusion MRI, Diffusion Tensor,
